--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -207,6 +207,7 @@
         <div
           class="u-expanded-width u-palette-4-base u-shape u-shape-rectangle u-shape-1"
         ></div>
+
         <div class="u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-col">
@@ -216,56 +217,31 @@
                     class="u-container-style u-image u-layout-cell u-size-60 u-image-1"
                     data-image-width="1200"
                     data-image-height="800"
-                  >
-                    <div class="u-container-layout"></div>
-                  </div>
-                </div>
-              </div>
-              <div class="u-size-30">
-                <div class="u-layout-row">
-                  <div
-                    class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-2"
-                  >
-                    <div
-                      class="u-container-layout u-container-layout-2 u-expanded-width"
-                    >
-                      <ul class="u-text u-text-4">
-                        <h4 class="new-text">CURRICULUM TUTORING</h4>
-                        <li style="">Elementary Core Subjects</li>
-                        <li style="">Middle School Core Subjects</li>
-                        <li style="">English I-IV</li>
-                        <li style="">Algebra 1 & 2</li>
-                        <li style="">Geometry</li>
-                        <li style="">​Homework Help</li>
-                      </ul>
-                      <ul class="u-text u-text-4">
-                        <h4 class="new-text">Test Prep</h4>
-                        <li style="">3 - 8 State Assessments</li>
-                        <li style="">Algebra 1 EOC</li>
-                        <li style="">English 1 & 2 EOC</li>
-                        <li style="">NWEA Assessments</li>
-                        <li style="">ISEE & SSAT Assessments</li>
-                        <li style="">​ACT & SAT</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="socials"></div>
-                  <div>Find Us on Social Media</div>
-                  <a
-                    href="https://www.facebook.com/shiningbrighttutors"
-                    class="fa fa-facebook"
-                  ></a>
-                  <a
-                    href="Contact.html"
-                    class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-active-palette-3-base u-text-black u-text-hover-white u-btn-2"
-                    >contact us</a
-                  >
+                  ></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <a
+        href="https://forms.gle/eFFdhjrrdggAGPEu6"
+        class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-white u-text-hover-black u-btn-1 u-btn-req"
+        target="_blank"
+        >Services</a
+      >
+      <img src="images/laptop with words.png" alt="" style="width: 100%" />
+
+      <div>Find Us on Social Media</div>
+      <a
+        href="https://www.facebook.com/shiningbrighttutors"
+        class="fa fa-facebook"
+      ></a>
+      <a
+        href="Contact.html"
+        class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-active-palette-3-base u-text-black u-text-hover-white u-btn-2"
+        >contact us</a
+      >
     </section>
     <section class="u-clearfix u-section-2" id="sec-5291">
       <div class="u-clearfix u-sheet u-sheet-1">
