--- a/Shining Bright Template/Rates.html
+++ b/Shining Bright Template/Rates.html
@@ -128,7 +128,7 @@
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                   href="Rates.html"
                   style="padding: 10px 20px"
-                  >Rates</a
+                  >Portal</a
                 >
               </li>
               <li class="u-nav-item">
@@ -172,7 +172,7 @@
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="Rates.html"
-                      >Rates</a
+                      >Portal</a
                     >
                   </li>
                   <li class="u-nav-item">
@@ -193,67 +193,18 @@
         <h2
           class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"
         >
-          Rates
-        </h2>
-        <div class="u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-1">
-          <div class="u-gutter-0 u-layout">
-            <div class="u-layout-row">
-              <div
-                class="u-align-left u-container-style u-layout-cell u-size-20 u-layout-cell-1"
-              >
-                <div
-                  class="u-container-layout u-valign-bottom-lg u-valign-bottom-xl u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-1"
-                >
-                  <img
-                    class="u-expanded-width u-image u-image-1"
-                    src="images/pexels-photo-5985406.jpeg"
-                    data-image-width="1527"
-                    data-image-height="1080"
-                  />
-                </div>
-              </div>
-              <div
-                class="u-align-center u-container-style u-grey-80 u-layout-cell u-size-20 u-layout-cell-2"
-              >
-                <div
-                  class="u-container-layout u-valign-middle u-container-layout-2"
-                >
-                  <h3 class="u-text u-text-2">
-                    85<span style="font-size: 2.25rem">%</span>
-                  </h3>
-                  <p
-                    class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-grey-40 u-text-3"
-                  >
-                    Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
-                  </p>
-                </div>
-              </div>
-              <div
-                class="u-align-left u-container-style u-layout-cell u-size-20 u-layout-cell-3"
-              >
-                <div
-                  class="u-container-layout u-valign-bottom-lg u-valign-bottom-xl u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-3"
-                >
-                  <img
-                    class="u-expanded-width u-image u-image-2"
-                    src="images/pexels-photo-7242297.jpeg"
-                    data-image-width="810"
-                    data-image-height="1080"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <p class="u-text u-text-4">
-          Our mission is to Create Successful Partnerships. By doing so, we
-          focus on ensuring a competitive edge and strive to make the building
-          process a positive experience for our clients.
-        </p>
-      </div>
+ <img src="images/logo side badge.png" alt="">
+ <h2>Portal SIGN IN</h2>
+ <hr class="protal-hr">
+ <p>Sign in to your account to access your profile, history, and access your tutoring session.</p>
+ <div class="sign-in-btn">
+   <a
+   href="https://forms.gle/eFFdhjrrdggAGPEu6"
+   class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1 u-btn-req"
+   target="_blank"
+   >Sign in</a
+   >
+ </div>
     </section>
 
     <footer
