--- a/Shining Bright Template/About.html
+++ b/Shining Bright Template/About.html
@@ -185,6 +185,7 @@
     </header>
     <div class="top-pic">
       <img src="images/new vi.jpg" alt="" class="top-picture" />
+      <img src="images/top picture.png" alt="" class="top-picture-2" />
     </div>
     <section class="u-clearfix u-grey-5 u-section-1" id="sec-bcab">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
