--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -225,9 +225,8 @@
         </div>
       </div>
       <a
-        href="https://forms.gle/eFFdhjrrdggAGPEu6"
+        href="Services.html"
         class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-white u-text-hover-black u-btn-1 u-btn-req"
-        target="_blank"
         >Services</a
       >
       <img src="images/laptop with words.png" alt="" style="width: 100%" />
