--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -231,48 +231,36 @@
       >
       <img src="images/laptop with words.png" alt="" style="width: 100%" />
 
-      <div>Find Us on Social Media</div>
+      <div class="connect-margin">Connect with Us on Social Media</div>
       <a
         href="https://www.facebook.com/shiningbrighttutors"
         class="fa fa-facebook"
+        target="_blank"
       ></a>
+      <a
+        href="https://twitter.com/S_Bright_Tutors"
+        class="fa fa-twitter"
+        target="_blank"
+      ></a>
+      <a
+        href="https://www.linkedin.com/company/shining-bright-tutors-llc"
+        class="fa fa-linkedin"
+        target="_blank"
+      ></a>
+      <a
+        href="https://www.instagram.com/shining_bright_tutors/"
+        class="fa fa-instagram"
+        target="_blank"
+      ></a>
+    </section>
+    <div class="contact-center">
       <a
         href="Contact.html"
         class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-active-palette-3-base u-text-black u-text-hover-white u-btn-2"
-        >contact us</a
+        >Contact Us</a
       >
-    </section>
-    <section class="u-clearfix u-section-2" id="sec-5291">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
-          <div class="u-layout">
-            <div class="u-layout-row">
-              <div
-                class="u-container-style u-image u-layout-cell u-size-30 u-image-1"
-                data-image-width="400"
-                data-image-height="265"
-              >
-                <div class="u-container-layout u-container-layout-1"></div>
-              </div>
-              <div
-                class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2"
-              >
-                <div
-                  class="u-container-layout u-valign-middle u-container-layout-2"
-                >
-                  <h2 class="u-text u-text-default u-text-1">
-                    Sample Headline
-                  </h2>
-                  <p class="u-text u-text-default u-text-2">
-                    Sample text. Click to select the Text Element.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    </div>
+
     <section
       class="u-align-center u-clearfix u-image u-shading u-section-3"
       src=""
@@ -286,7 +274,10 @@
           Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
           nullam nunc justo sagittis suscipit ultrices.
         </p>
-        <a href="#" class="u-btn u-button-style u-palette-2-base u-btn-1"
+        <a
+          href="https://www.facebook.com/shiningbrighttutors/reviews/?ref=page_internal"
+          class="u-btn u-button-style u-palette-2-base u-btn-1"
+          target="_blank"
           >Read More</a
         >
       </div>
@@ -300,6 +291,7 @@
         <p class="u-small-text u-text u-text-variant u-text-1">
           Sample text. Click to select the Text Element.
         </p>
+        <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
       </div>
     </footer>
   </body>
