--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -53,7 +53,7 @@
     <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
-          href="https://nicepage.com"
+          href="Home.html"
           class="u-image u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
@@ -224,12 +224,14 @@
           </div>
         </div>
       </div>
-      <a
-        href="Services.html"
-        class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-white u-text-hover-black u-btn-1 u-btn-req"
-        >Services</a
-      >
-      <img src="images/laptop with words.png" alt="" style="width: 100%" />
+      <div>
+        <a
+          href="Services.html"
+          class="u-btn u-hover-white u-none u-text-active-palette-3-base u-text-hover-white u-btn-2 u-btn-req"
+          >Services</a
+        >
+        <img src="images/laptop with words.png" alt="" style="width: 100%" />
+      </div>
 
       <div class="connect-margin">Connect with Us on Social Media</div>
       <a
@@ -287,11 +289,57 @@
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
       id="sec-1144"
     >
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">
-          Sample text. Click to select the Text Element.
-        </p>
-        <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
+      <div class="u-clearfix u-sheet-1 bottom-contianer">
+        <a
+          href="Home.html"
+          class="u-logo u-image-1"
+          data-image-width="256"
+          data-image-height="191"
+        >
+          <img
+            src="images/logosmall.png"
+            class="footer-logo u-logo-image u-logo-image-1"
+          />
+        </a>
+
+        <div class="footer-block-1">
+          <a href="Services.html">Services</a>
+          <a href="About.html">About Us</a>
+          <a href="Contact.html">Contact Us</a>
+          <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
+        </div>
+        <div>
+          <div class="connect-margin">Connect with Us on Social Media</div>
+          <a
+            href="https://www.facebook.com/shiningbrighttutors"
+            class="fa fa-facebook"
+            target="_blank"
+          ></a>
+          <a
+            href="https://twitter.com/S_Bright_Tutors"
+            class="fa fa-twitter"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.linkedin.com/company/shining-bright-tutors-llc"
+            class="fa fa-linkedin"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com/shining_bright_tutors/"
+            class="fa fa-instagram"
+            target="_blank"
+          ></a>
+        </div>
+        <div class="footer-block-1">
+          <a href="Rates.html">Sign In</a>
+          <p>Drop Us a Line</p>
+          <input
+            type="email"
+            placeholder="Enter Your Email"
+            class="footer-email"
+          />
+        </div>
       </div>
     </footer>
   </body>
