--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -199,11 +199,7 @@
         <h1 class="u-custom-font u-font-playfair-display u-text u-text-1">
           Learning for your children from the comfort of your own home!
         </h1>
-        <p class="u-text u-text-2">
-          Personalized Online Tutoring to Reach Your Goals. Shining Bright
-          Tutors offers a variety of services designed to meet your student
-          where they are at.
-        </p>
+
         <div
           class="u-expanded-width u-palette-4-base u-shape u-shape-rectangle u-shape-1"
         ></div>
@@ -223,6 +219,12 @@
             </div>
           </div>
         </div>
+        <p class="u-text u-text-2">
+          Shining Bright Tutors LLC serves students online in grades K-12. We
+          specialize in 1-on-1 tutoring covering core subjects and test prep.
+          All services are tailored to your student so that they may meet their
+          goals.
+        </p>
       </div>
       <div>
         <a
