--- a/Shining Bright Template/FAQs.html
+++ b/Shining Bright Template/FAQs.html
@@ -241,8 +241,8 @@
               <div class="u-container-layout u-container-layout-1">
                 <div class="fr-view u-clearfix u-rich-text u-text">
                   <p>
-                    Answer. All tutoring takes place in online using our
-                    tutoring platform.
+                    All tutoring takes place in online using our tutoring
+                    platform.
                   </p>
                 </div>
               </div>
@@ -256,7 +256,7 @@
               aria-selected="false"
             >
               <span class="u-accordion-link-text"
-                >WAre you able to tutor in person?</span
+                >Are you able to tutor in person?</span
               ><span
                 class="u-accordion-link-icon u-icon u-text-grey-50 u-icon-2"
                 ><svg
@@ -288,9 +288,9 @@
               <div class="u-container-layout u-container-layout-2">
                 <div class="fr-view u-clearfix u-rich-text u-text">
                   <p>
-                    Answer. At this time in person tutoring services are not
-                    offered. Keep checking back as we continue to add programs
-                    and services to our lists.
+                    At this time in person tutoring services are not offered.
+                    Keep checking back as we continue to add programs and
+                    services to our lists.
                   </p>
                 </div>
               </div>
@@ -335,10 +335,10 @@
               <div class="u-container-layout u-container-layout-3">
                 <div class="u-clearfix u-rich-text u-text">
                   <p>
-                    Answer. Our platform is web based, therefore it works
-                    anywhere that has internet access. This includes on a phone,
-                    ipad/tablet, laptop, etc. Ideally a laptop would work best.
-                    You will also need a strong internet connection.
+                    Our platform is web based, therefore it works anywhere that
+                    has internet access. This includes on a phone, ipad/tablet,
+                    laptop, etc. Ideally a laptop would work best. You will also
+                    need a strong internet connection.
                   </p>
                 </div>
               </div>
@@ -434,10 +434,10 @@
               <div class="u-container-layout u-container-layout-3">
                 <div class="u-clearfix u-rich-text u-text">
                   <p>
-                    Answer. This is not a requirement. Your tutor will reach out
-                    to you to talk about how your child is doing and where they
-                    are performing. When your tutor starts, depending on your
-                    goals, they may complete an informal assessment?
+                    This is not a requirement. Your tutor will reach out to you
+                    to talk about how your child is doing and where they are
+                    performing. When your tutor starts, depending on your goals,
+                    they may complete an informal assessment?
                   </p>
                 </div>
               </div>
@@ -484,8 +484,8 @@
               <div class="u-container-layout u-container-layout-3">
                 <div class="u-clearfix u-rich-text u-text">
                   <p>
-                    Answer. We sure do! We provide tutoring in as little as 30
-                    minute sessions.
+                    We sure do! We provide tutoring in as little as 30 minute
+                    sessions.
                   </p>
                 </div>
               </div>
@@ -531,9 +531,9 @@
               <div class="u-container-layout u-container-layout-3">
                 <div class="u-clearfix u-rich-text u-text">
                   <p>
-                    Answer. As a parent you will have access to see the notes
-                    that the tutor leaves that discusses how your child is doing
-                    at the end of each session
+                    As a parent you will have access to see the notes that the
+                    tutor leaves that discusses how your child is doing at the
+                    end of each session
                   </p>
                 </div>
               </div>
@@ -579,12 +579,12 @@
               <div class="u-container-layout u-container-layout-3">
                 <div class="u-clearfix u-rich-text u-text">
                   <p>
-                    Answer. While payment for your session is due 12 hours
-                    before your session begins, we can design packages to meet
-                    your needs. Please reach out to us so that we may design a
-                    package that meets your needs and fits your budget. Please
-                    note, if payments are not received before the sessions
-                    begin, they will be automatically cancelled.
+                    While payment for your session is due 12 hours before your
+                    session begins, we can design packages to meet your needs.
+                    Please reach out to us so that we may design a package that
+                    meets your needs and fits your budget. Please note, if
+                    payments are not received before the sessions begin, they
+                    will be automatically cancelled.
                   </p>
                 </div>
               </div>
