--- a/Shining Bright Template/Rates.html
+++ b/Shining Bright Template/Rates.html
@@ -199,7 +199,7 @@
  <p>Sign in to your account to access your profile, history, and access your tutoring session.</p>
  <div class="sign-in-btn">
    <a
-   href="https://forms.gle/eFFdhjrrdggAGPEu6"
+   href="https://shiningbrighttutors.tutorwithpearl.com/"
    class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1 u-btn-req"
    target="_blank"
    >Sign in</a
