--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -199,9 +199,11 @@
       <a href="Home.html"
         ><img src="images/logo side badge.png" alt="" style="width: 28%"
       /></a>
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1 contact-align">
+      <div class="u-clearfix u-valign-middle u-sheet-1 contact-align">
         <div class="u-form u-form-1 u-1-box">
-          <h1 class="u-text u-text-default u-text-1">Drop us a line!</h1>
+          <div class="header-center">
+            <h1 class="u-text u-text-default u-text-1">Drop us a line!</h1>
+          </div>
           <form
             action="https://formsubmit.co/shiningbrighttutors@gmail.com"
             method="POST"
