--- a/Shining Bright Template/FAQs.html
+++ b/Shining Bright Template/FAQs.html
@@ -189,7 +189,7 @@
     >
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="top-img">
-          <img src="images/badge logo.png" alt="" style="width: 450px" />
+          <img src="images/badge logo.png" alt="" class="top-image" />
         </div>
         <h2 class="u-text u-text-default u-text-1">
           Frequently Asked Questions:
