--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -265,27 +265,7 @@
       >
     </div>
 
-    <section
-      class="u-align-center u-clearfix u-image u-shading u-section-3"
-      src=""
-      data-image-width="256"
-      data-image-height="256"
-      id="sec-ce11"
-    >
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-default u-title u-text-1">INTUITIVE</h1>
-        <p class="u-large-text u-text u-text-default u-text-variant u-text-2">
-          Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          nullam nunc justo sagittis suscipit ultrices.
-        </p>
-        <a
-          href="https://www.facebook.com/shiningbrighttutors/reviews/?ref=page_internal"
-          class="u-btn u-button-style u-palette-2-base u-btn-1"
-          target="_blank"
-          >Read More</a
-        >
-      </div>
-    </section>
+    <section></section>
 
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
@@ -310,7 +290,7 @@
           <a href="Contact.html">Contact Us</a>
           <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
         </div>
-        <div>
+        <div class="social-btns">
           <div class="connect-margin">Connect with Us on Social Media</div>
           <a
             href="https://www.facebook.com/shiningbrighttutors"
