--- a/Shining Bright Template/Rates.html
+++ b/Shining Bright Template/Rates.html
@@ -193,7 +193,7 @@
         <h2
           class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"
         >
- <img src="images/logo side badge.png" alt="">
+ <img src="images/logo side badge.png" alt="" class="top-image">
  <h2>Portal SIGN IN</h2>
  <hr class="protal-hr">
  <p>Sign in to your account to access your profile, history, and access your tutoring session.</p>
