--- a/Shining Bright Template/About.html
+++ b/Shining Bright Template/About.html
@@ -9,6 +9,7 @@
     <title>About</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="About.css" media="screen" />
+    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -127,7 +128,7 @@
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                   href="Rates.html"
                   style="padding: 10px 20px"
-                  >Rates</a
+                  >Sign in</a
                 >
               </li>
               <li class="u-nav-item">
@@ -171,7 +172,7 @@
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="Rates.html"
-                      >Rates</a
+                      >Sign in</a
                     >
                   </li>
                   <li class="u-nav-item">
