--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -9,6 +9,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Home.css" media="screen" />
+    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <script
       class="u-script"
       type="text/javascript"
@@ -132,7 +133,7 @@
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                   href="Rates.html"
                   style="padding: 10px 20px"
-                  >Rates</a
+                  >Sign in</a
                 >
               </li>
               <li class="u-nav-item">
@@ -176,7 +177,7 @@
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="Rates.html"
-                      >Rates</a
+                      >Sign in</a
                     >
                   </li>
                   <li class="u-nav-item">
