--- a/Shining Bright Template/Services.html
+++ b/Shining Bright Template/Services.html
@@ -9,6 +9,11 @@
     <title>Services</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Services.css" media="screen" />
+    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script
       class="u-script"
       type="text/javascript"
@@ -123,7 +128,7 @@
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                   href="Rates.html"
                   style="padding: 10px 20px"
-                  >Rates</a
+                  >Sign in</a
                 >
               </li>
               <li class="u-nav-item">
@@ -167,7 +172,7 @@
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="Rates.html"
-                      >Rates</a
+                      >Sign in</a
                     >
                   </li>
                   <li class="u-nav-item">
@@ -337,10 +342,57 @@
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
       id="sec-1144"
     >
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">
-          Sample text. Click to select the Text Element.
-        </p>
+      <div class="u-clearfix u-sheet-1 bottom-contianer">
+        <a
+          href="Home.html"
+          class="u-logo u-image-1"
+          data-image-width="256"
+          data-image-height="191"
+        >
+          <img
+            src="images/logosmall.png"
+            class="footer-logo u-logo-image u-logo-image-1"
+          />
+        </a>
+
+        <div class="footer-block-1">
+          <a href="Services.html">Services</a>
+          <a href="About.html">About Us</a>
+          <a href="Contact.html">Contact Us</a>
+          <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
+        </div>
+        <div class="social-btns">
+          <div class="connect-margin">Connect with Us on Social Media</div>
+          <a
+            href="https://www.facebook.com/shiningbrighttutors"
+            class="fa fa-facebook"
+            target="_blank"
+          ></a>
+          <a
+            href="https://twitter.com/S_Bright_Tutors"
+            class="fa fa-twitter"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.linkedin.com/company/shining-bright-tutors-llc"
+            class="fa fa-linkedin"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com/shining_bright_tutors/"
+            class="fa fa-instagram"
+            target="_blank"
+          ></a>
+        </div>
+        <div class="footer-block-1">
+          <a href="Rates.html">Sign In</a>
+          <p>Drop Us a Line</p>
+          <input
+            type="email"
+            placeholder="Enter Your Email"
+            class="footer-email"
+          />
+        </div>
       </div>
     </footer>
   </body>
