--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -230,7 +230,7 @@
       <div>
         <a
           href="Services.html"
-          class="u-btn u-hover-white u-none u-text-active-palette-3-base u-text-hover-white u-btn-2 u-btn-req"
+          class="u-hover-white u-none u-text-hover-white u-btn-req"
           >Services</a
         >
         <img src="images/laptop with words.png" alt="" style="width: 100%" />
@@ -266,7 +266,35 @@
       >
     </div>
 
-    <section></section>
+    <section>
+      <div class="blog-box">
+        <div class="blog-card">
+          <img src="images/blog image 1.png" alt="" class="blog-image u-text" />
+          <p class="p-blog">
+            May 24, 2022 - Teaching Tip Tuesday: Using manipulatives helps
+            students to retain what they are learning. Using food keeps learners
+            engaged because playing with food is FUN! Introducing perimeter and
+            area using CHEEZ-ITs uses food as manipulatives. This is such a
+            delicious way to learn math! Sign up for tutoring and your kids can
+            benefit from strategies like these.
+          </p>
+          <a href="#" class="blog-btn">Read More</a>
+        </div>
+        <div class="blog-card">
+          <img src="images/blog image 1.png" alt="" class="blog-image u-text" />
+          <p class="p-blog">
+            May 24, 2022 - Teaching Tip Tuesday: Using manipulatives helps
+            students to retain what they are learning. Using food keeps learners
+            engaged because playing with food is FUN! Introducing perimeter and
+            area using CHEEZ-ITs uses food as manipulatives. This is such a
+            delicious way to learn math! Sign up for tutoring and your kids can
+            benefit from strategies like these.
+          </p>
+          <a href="#" class="blog-btn">Read More</a>
+        </div>
+        <div class="blog-card"></div>
+      </div>
+    </section>
 
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
