--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -233,7 +233,7 @@
           class="u-hover-white u-none u-text-hover-white u-btn-req"
           >Services</a
         >
-        <img src="images/laptop with words.png" alt="" style="width: 100%" />
+        <img src="images/laptop final.png" alt="" style="width: 75%" />
       </div>
 
       <div class="connect-margin">Connect with Us on Social Media</div>
