--- a/Shining Bright Template/oldhomescreen.html
+++ b/Shining Bright Template/oldhomescreen.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -39,4 +39,4 @@
     </div>
     <div class="desktop-image"></div>
   </body>
-</html>
+</html> -->
