--- a/About.html
+++ b/About.html
@@ -3,17 +3,17 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <meta name="keywords" content="​​Rates" />
+    <meta name="keywords" content="About Us" />
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
-    <title>Sign in</title>
+    <title>About</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
-    <link rel="stylesheet" href="Rates.css" media="screen" />
+    <link rel="stylesheet" href="About.css" media="screen" />
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script
       class="u-script"
       type="text/javascript"
@@ -32,11 +32,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i"
     />
-    <link
-      id="u-page-google-font"
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
-    />
 
     <script type="application/ld+json">
       {
@@ -47,7 +42,7 @@
       }
     </script>
     <meta name="theme-color" content="#478ac9" />
-    <meta property="og:title" content="Rates" />
+    <meta property="og:title" content="About" />
     <meta property="og:type" content="website" />
   </head>
   <body class="u-body u-xl-mode">
@@ -99,7 +94,7 @@
               <li class="u-nav-item">
                 <a
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                  href="Home.html"
+                  href="index.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -156,7 +151,7 @@
                   class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Home.html"
+                    <a class="u-button-style u-nav-link" href="index.html"
                       >Home</a
                     >
                   </li>
@@ -193,81 +188,133 @@
         </nav>
       </div>
     </header>
-    <section class="u-align-center u-clearfix u-section-1" id="carousel_b9b9">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h2
-          class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"
+    <div class="top-pic">
+      <img src="images/new vi.jpg" alt="" class="top-picture" />
+      <img src="images/top picture.png" alt="" class="top-picture-2" />
+    </div>
+    <section class="u-clearfix u-grey-5 u-section-1" id="sec-bcab">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div
+          class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1"
         >
- <img src="images/logo side badge.png" alt="" class="top-image">
- <h2>Portal SIGN IN</h2>
- <hr class="protal-hr">
- <p>Sign in to your account to access your profile, history, and access your tutoring session.</p>
- <div class="sign-in-btn">
-   <a
-   href="https://shiningbrighttutors.tutorwithpearl.com/"
-   class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1 u-btn-req"
-   target="_blank"
-   >Sign in</a
-   >
- </div>
+          <div class="u-gutter-0 u-layout">
+            <div
+              class="u-align-left u-container-style u-layout-cell u-right-cell u-size-31 u-layout-cell-3"
+              src=""
+            >
+              <div class="u-container-layout u-container-layout-3">
+                <h2 class="u-text u-text-default u-text-1">About Us</h2>
+                <p class="u-text u-text-2">
+                  Shining Bright Tutors LLC is a tutoring company that places
+                  importance on student achievement first. Our goal is to CREATE
+                  BRIGHT FUTURES! We aim to serve students online in grades K-12
+                  across the United States. We specialize in one on one tutoring
+                  covering all core subjects and including Test Prep for state
+                  and district assessments as well as the college entry exams
+                  (SAT and ACT).
+                </p>
+
+                <h5>Meet Our Founder:</h5>
+                <div class="top-pic">
+                  <img
+                    src="images/karmens photo2.jpg"
+                    alt=""
+                    style="height: 300px"
+                  />
+                </div>
+
+                <p>
+                  Karmen Kynard, originally from Toledo, Ohio started tutoring
+                  in January 2017. She started simply because she wanted to
+                  provide a service to students. She is a certified educator for
+                  grades K-12 and has served students in both general education
+                  and special education settings. She graduated with her
+                  Master’s in Education from Bowling Green State University in
+                  Ohio with a focus on Special Education. Her specialty is
+                  working with struggling learners in all core subjects.
+                  Continuing her education gained her another Master's in
+                  Education for Educational Leadership.
+                </p>
+
+                <p>
+                  Over the course of her career she has had the opportunity to
+                  (change font?)work at schools located in 4 different states
+                  (Ohio, Wisconsin, Louisiana, and Texas) and 6 different cities
+                  (Toledo, Cleveland, Milwaukee, Baton Rouge, Lafayette,
+                  Austin). Due to teaching in multiple states, she has learned
+                  flexibility and how to adapt to differing state standards and
+                  curriculums.
+                </p>
+
+                <p>
+                  While she enjoyed tutoring, she realized that she could have a
+                  much larger impact if she started accepting and working with
+                  more tutors to support students and that when Shining Bright
+                  Tutors was born.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer
-    class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
-    id="sec-1144"
-  >
-    <div class="u-clearfix u-sheet-1 bottom-contianer">
-      <a
-        href="Home.html"
-        class="u-logo u-image-1"
-        data-image-width="256"
-        data-image-height="191"
-      >
-        <img
-          src="images/logosmall.png"
-          class="footer-logo u-logo-image u-logo-image-1"
-        />
-      </a>
+      class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
+      id="sec-1144"
+    >
+      <div class="u-clearfix u-sheet-1 bottom-contianer">
+        <a
+          href="index.html"
+          class="u-logo u-image-1"
+          data-image-width="256"
+          data-image-height="191"
+        >
+          <img
+            src="images/logosmall.png"
+            class="footer-logo u-logo-image u-logo-image-1"
+          />
+        </a>
 
-      <div class="footer-block-1">
-        <a href="Services.html">Services</a>
-        <a href="About.html">About Us</a>
-        <a href="Contact.html">Contact Us</a>
-        <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
+        <div class="footer-block-1">
+          <a href="Services.html">Services</a>
+          <a href="About.html">About Us</a>
+          <a href="Contact.html">Contact Us</a>
+          <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
+        </div>
+        <div class="social-btns">
+          <div class="connect-margin">Connect with Us on Social Media</div>
+          <a
+            href="https://www.facebook.com/shiningbrighttutors"
+            class="fa fa-facebook"
+            target="_blank"
+          ></a>
+          <a
+            href="https://twitter.com/S_Bright_Tutors"
+            class="fa fa-twitter"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.linkedin.com/company/shining-bright-tutors-llc"
+            class="fa fa-linkedin"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com/shining_bright_tutors/"
+            class="fa fa-instagram"
+            target="_blank"
+          ></a>
+        </div>
+        <div class="footer-block-1">
+          <a href="Rates.html">Sign In</a>
+          <p>Drop Us a Line</p>
+          <input
+            type="email"
+            placeholder="Enter Your Email"
+            class="footer-email"
+          />
+        </div>
       </div>
-      <div class="social-btns">
-        <div class="connect-margin">Connect with Us on Social Media</div>
-        <a
-          href="https://www.facebook.com/shiningbrighttutors"
-          class="fa fa-facebook"
-          target="_blank"
-        ></a>
-        <a
-          href="https://twitter.com/S_Bright_Tutors"
-          class="fa fa-twitter"
-          target="_blank"
-        ></a>
-        <a
-          href="https://www.linkedin.com/company/shining-bright-tutors-llc"
-          class="fa fa-linkedin"
-          target="_blank"
-        ></a>
-        <a
-          href="https://www.instagram.com/shining_bright_tutors/"
-          class="fa fa-instagram"
-          target="_blank"
-        ></a>
-      </div>
-      <div class="footer-block-1">
-        <a href="Rates.html">Sign In</a>
-        <p>Drop Us a Line</p>
-        <input
-          type="email"
-          placeholder="Enter Your Email"
-          class="footer-email"
-        />
-      </div>
-    </div>
-  </footer>
+    </footer>
   </body>
 </html>
