--- a/Contact.html
+++ b/Contact.html
@@ -196,7 +196,7 @@
       class="u-align-center u-clearfix u-grey-5 u-section-1"
       id="sec-6701"
     >
-      <a href="Home.html"
+      <a href="index.html"
         ><img src="images/logo side badge.png" alt="" style="width: 28%"
       /></a>
       <div class="u-clearfix u-valign-middle u-sheet-1 contact-align">
@@ -311,7 +311,7 @@
     >
       <div class="u-clearfix u-sheet-1 bottom-contianer">
         <a
-          href="Home.html"
+          href="index.html"
           class="u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
