--- a/Services.html
+++ b/Services.html
@@ -94,7 +94,7 @@
               <li class="u-nav-item">
                 <a
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                  href="Home.html"
+                  href="index.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -151,7 +151,7 @@
                   class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Home.html"
+                    <a class="u-button-style u-nav-link" href="index.html"
                       >Home</a
                     >
                   </li>
@@ -344,7 +344,7 @@
     >
       <div class="u-clearfix u-sheet-1 bottom-contianer">
         <a
-          href="Home.html"
+          href="index.html"
           class="u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
