--- a/About.html
+++ b/About.html
@@ -49,7 +49,7 @@
     <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
-          href="https://nicepage.com"
+          href="/"
           class="u-image u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
@@ -94,7 +94,7 @@
               <li class="u-nav-item">
                 <a
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                  href="index.html"
+                  href="/"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -151,9 +151,7 @@
                   class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="index.html"
-                      >Home</a
-                    >
+                    <a class="u-button-style u-nav-link" href="/">Home</a>
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="About.html"
@@ -265,7 +263,7 @@
     >
       <div class="u-clearfix u-sheet-1 bottom-contianer">
         <a
-          href="index.html"
+          href="/"
           class="u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
