--- a/thanks.html
+++ b/thanks.html
@@ -27,7 +27,7 @@
             (512) 607-5973
           </p>
           <form action="">
-            <a class="go-button" href="index.html">Home</a>
+            <a class="go-button" href="/">Home</a>
             <a class="go-button-1" href="Shining Bright Template/Contact.html"
               >Contact Us</a
             >
