--- a/Contact.html
+++ b/Contact.html
@@ -196,7 +196,7 @@
       class="u-align-center u-clearfix u-grey-5 u-section-1"
       id="sec-6701"
     >
-      <a href="index.html"
+      <a href="/"
         ><img src="images/logo side badge.png" alt="" style="width: 28%"
       /></a>
       <div class="u-clearfix u-valign-middle u-sheet-1 contact-align">
@@ -246,7 +246,7 @@
             </div>
             <div class="u-align-center u-form-group u-form-submit">
               <a
-                href="../index.html"
+                href="/"
                 class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
                 >Home</a
               >
@@ -311,7 +311,7 @@
     >
       <div class="u-clearfix u-sheet-1 bottom-contianer">
         <a
-          href="index.html"
+          href="/"
           class="u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
