--- a/Rates.html
+++ b/Rates.html
@@ -99,7 +99,7 @@
               <li class="u-nav-item">
                 <a
                   class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                  href="index.html"
+                  href="/"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -156,7 +156,7 @@
                   class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="index.html"
+                    <a class="u-button-style u-nav-link" href="/"
                       >Home</a
                     >
                   </li>
@@ -218,7 +218,7 @@
   >
     <div class="u-clearfix u-sheet-1 bottom-contianer">
       <a
-        href="index.html"
+        href="/"
         class="u-logo u-image-1"
         data-image-width="256"
         data-image-height="191"
