--- a/thanks.html
+++ b/thanks.html
@@ -11,9 +11,7 @@
   <body>
     <div class="container">
       <div class="all-container">
-        <a href="Shining Bright Template/Home.html"
-          ><img id="logo" src="images/logo.png" alt=""
-        /></a>
+        <a href="/"><img id="logo" src="images/logo.png" alt="" /></a>
 
         <div id="shoe-img"></div>
         <div class="text-container">
@@ -28,9 +26,7 @@
           </p>
           <form action="">
             <a class="go-button" href="/">Home</a>
-            <a class="go-button-1" href="Shining Bright Template/Contact.html"
-              >Contact Us</a
-            >
+            <a class="go-button-1" href="Contact.html">Contact Us</a>
           </form>
         </div>
       </div>
