--- a/Services.html
+++ b/Services.html
@@ -357,7 +357,7 @@
           <a href="Services.html">Services</a>
           <a href="About.html">About Us</a>
           <a href="Contact.html">Contact Us</a>
-          <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
+          <a href="privcay.html">Privacy Policy</a>
         </div>
         <div class="social-btns">
           <div class="connect-margin">Connect with Us on Social Media</div>
