--- a/privcay.html
+++ b/privcay.html
@@ -54,7 +54,7 @@
     <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
-          href="https://nicepage.com"
+          href="/"
           class="u-image u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
@@ -348,7 +348,7 @@
         <a href="Services.html">Services</a>
         <a href="About.html">About Us</a>
         <a href="Contact.html">Contact Us</a>
-        <a href="/Shining Bright Template/privcay.html">Privacy Policy</a>
+        <a href="privcay.html">Privacy Policy</a>
       </div>
       <div class="social-btns">
         <div class="connect-margin">Connect with Us on Social Media</div>
