--- a/backEnd.html
+++ b/backEnd.html
@@ -16,6 +16,7 @@
 </a>
 <h1 class="topLogo">Dynamic BackEnd</h1>
 <a href="" class="pageButton">Home 2.0</a>
+<a href="index.html" class="pageButton">Home Page</a>
   
 </body>
 </html>
