--- a/backEnd.html
+++ b/backEnd.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Back End</title>
 </head>
 <body class="backEnd">
     <a
@@ -15,8 +15,9 @@
     <img src="images/logosmall.png" class="u-logo-image u-logo-image-1 loginLogo" />
 </a>
 <h1 class="topLogo">Dynamic BackEnd</h1>
-<a href="" class="pageButton">Home 2.0</a>
+
 <a href="index.html" class="pageButton">Home Page</a>
-  
+
+<div><a href="" class="pageButton">Home 2.0</a></div>  
 </body>
 </html>
