--- a/backEnd.html
+++ b/backEnd.html
@@ -18,6 +18,6 @@
 
 <a href="index.html" class="pageButton">Home Page</a>
 
-<div><a href="" class="pageButton">Home 2.0</a></div>  
+<a href="" class="pageButton">Home 2.0</a>  
 </body>
 </html>
