--- a/frontend.html
+++ b/frontend.html
@@ -3,6 +3,7 @@
   <head>
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
   </head>
   <body>
     <div>
