--- a/backEnd.html
+++ b/backEnd.html
@@ -19,6 +19,6 @@
 
 <a href="index.html" class="pageButton">Home Page</a>
 
-<a href="" class="pageButton">Home 2.0</a>  
+<a href="home2.html" class="pageButton">Home 2.0</a>  
 </body>
 </html>
